--- a/test-output/SparkReport/Index.html
+++ b/test-output/SparkReport/Index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Automation Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Aug 30, 2023 01:59:14 PM</span></a>
+<a href="#"><span class="badge badge-primary">Aug 31, 2023 06:15:19 PM</span></a>
 </li>
 </ul>
 </div>
@@ -79,7 +79,7 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@TCOO1</a>
+<a class="dropdown-item" href="#">@TCOO2</a><a class="dropdown-item" href="#">@TCOO1</a><a class="dropdown-item" href="#">@Login</a>
 </ul>
 </li>
 </ul>
@@ -92,7 +92,7 @@
           <div class="test-detail">
             <p class="name">login_functionality_check</p>
             <p class="text-sm">
-              <span>1:59:15 PM</span> / <span>00:00:17:696</span>
+              <span>6:15:20 PM</span> / <span>00:00:17:926</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -101,9 +101,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">login_functionality_check</h5>
-<span class='badge badge-success'>08.30.2023 1:59:15 PM</span>
-<span class='badge badge-danger'>08.30.2023 1:59:33 PM</span>
-<span class='badge badge-default'>00:00:17:696</span>
+<span class='badge badge-success'>08.31.2023 6:15:20 PM</span>
+<span class='badge badge-danger'>08.31.2023 6:15:38 PM</span>
+<span class='badge badge-default'>00:00:17:926</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -127,7 +127,30 @@
               </div>
               <div class="step pass-bg" title="com.thinesh.steps.LoginSteps.user_login_with_valid_credentials(io.cucumber.datatable.DataTable)">
                 <span>Then User login with valid credentials</span>
-      <div><table class='markup-table table '><tr><td>username</td><td>password</td></tr><tr><td>Admin</td><td>admin123</td></tr></table>
+      <div><table class='markup-table table '><tr><td>username</td><td>Admin</td></tr><tr><td>password</td><td>admin123</td></tr></table>
+      </div>
+      <div>
+      </div>
+              </div>
+          </div>
+        </div>
+  </div>
+  <div class="card">
+    <div class="card-header" role="tab">
+      <div class="card-title">
+        <div class="node" id="9"><span class="badge log pass-bg mr-2">Pass</span>Login check with invalid credentials</div>
+      </div>
+    </div>
+        <div class="collapse">
+          <div class="card-body">
+              <div class="step pass-bg" title="com.thinesh.steps.LoginSteps.user_launch_the_application()">
+                <span>Given User launch the application</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="com.thinesh.steps.LoginSteps.user_login_with_invalid_credentials(io.cucumber.datatable.DataTable)">
+                <span>Then User login with invalid credentials</span>
+      <div><table class='markup-table table '><tr><td>username</td><td>Thinesh</td></tr><tr><td>password</td><td>Lock@123</td></tr></table>
       </div>
       <div>
       </div>
@@ -151,10 +174,46 @@
 <div class="test-list">
 <div class="test-list-tools">
 <ul class="tools pull-left"><li><a href=""><span class="font-size-14">Category</span></a></li></ul>
-<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">1</span></a></li></ul>
+<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">3</span></a></li></ul>
 </div>
 <div class="test-list-wrapper scrollable">
 <ul class="test-list-item">
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log pass-bg'>1</span>
+</span>
+<p class="name">@TCOO2</p>
+<p class="duration text-sm">1 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>@TCOO2</h4>
+<span status="pass" class='badge log pass-bg'>1 passed</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>18:15:29 PM</td>
+<td>
+<a href="#" class="linked" test-id='1' id='9'>Login check with invalid credentials</a>
+<div class="">
+<span class="badge badge-default">login_functionality_check.Login check with invalid credentials</span>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
@@ -179,11 +238,57 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>13:59:15 PM</td>
+<td>18:15:20 PM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='2'>Login check with valid credentials</a>
 <div class="">
 <span class="badge badge-default">login_functionality_check.Login check with valid credentials</span>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log pass-bg'>2</span>
+</span>
+<p class="name">@Login</p>
+<p class="duration text-sm">2 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>@Login</h4>
+<span status="pass" class='badge log pass-bg'>2 passed</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>18:15:20 PM</td>
+<td>
+<a href="#" class="linked" test-id='1' id='2'>Login check with valid credentials</a>
+<div class="">
+<span class="badge badge-default">login_functionality_check.Login check with valid credentials</span>
+</div>
+</td>
+</tr>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>18:15:29 PM</td>
+<td>
+<a href="#" class="linked" test-id='1' id='9'>Login check with invalid credentials</a>
+<div class="">
+<span class="badge badge-default">login_functionality_check.Login check with invalid credentials</span>
 </div>
 </td>
 </tr>
@@ -204,13 +309,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Aug 30, 2023 01:59:14 PM</h3>
+<h3>Aug 31, 2023 06:15:19 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Aug 30, 2023 01:59:33 PM</h3>
+<h3>Aug 31, 2023 06:15:38 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -261,7 +366,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>1</b> scenarios passed</small></div>
+<div><small data-tooltip='100%'><b>2</b> scenarios passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -281,7 +386,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>2</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>4</b> steps passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -300,7 +405,7 @@
 </div></div>
 <script>
 var timeline = {
-"login_functionality_check":17.696
+"login_functionality_check":17.926
 };
 </script>
 <div class="row">
@@ -310,8 +415,24 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
+<td>@TCOO2</td>
+<td>1</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>100%</td>
+</tr>
+<tr>
 <td>@TCOO1</td>
 <td>1</td>
+<td>0</td>
+<td>0</td>
+<td>0</td>
+<td>100%</td>
+</tr>
+<tr>
+<td>@Login</td>
+<td>2</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
@@ -331,13 +452,13 @@ failParent: 0,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 1,
+passChild: 2,
 failChild: 0,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 2,
+passGrandChild: 4,
 failGrandChild: 0,
 warningGrandChild: 0,
 skipGrandChild: 0,
